# django_poetry

./: pyproject.toml
config/: mysql8.0_conf
django_poetry/: 23儿童粉342qw  test.py
